--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="//embed.typeform.com/next/css/popup.css" />
-  <meta name="description" content="A COLLABORATION BETWEEN NATURE AND MAN">
+  <meta name="description" content="dreaming wide awake.">
   <meta property="og:image" content="images/intro-thumbnail-tile.png">
-  <link rel="icon" href="images/jx-smiley.png" type="image/icon type">
+  <link rel="icon" href="images/testimage1.jpg" type="image/icon type">
   <style>
     body {
       background-color: #EFEFEF;
@@ -19,7 +19,7 @@
     }
 
     .logo {
-      background: url("images/jx_newlogo-1.png") no-repeat center/contain;
+      background: url("images/testimage1.jpg") no-repeat center/contain;
       text-align: left;
       color: #fff;
       height: 50px;
