--- a/about.html
+++ b/about.html
@@ -2,24 +2,27 @@
 <html>
 
 <head>
-  <title>plantifulsoul</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="//embed.typeform.com/next/css/popup.css" />
-  <meta name="description" content="dreaming wide awake.">
-  <meta property="og:image" content="images/intro-thumbnail-tile.png">
-  <link rel="icon" href="images/testimage1.jpg" type="image/icon type">
+    <title>Life Is A Ceremony</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="A COLLABORATION BETWEEN NATURE AND MAN">
+    <meta property="og:image" content="images/intro-thumbnail-tile.png">
+    <link rel="icon" href="images/jx-smiley.png" type="image/icon type">
+    <link rel="stylesheet" href="//embed.typeform.com/next/css/popup.css" />
   <style>
-    body {
-      background-color: #EFEFEF;
-      padding: 25px;
-      margin: 0;
-      display: grid;
-      height: 100vh; /* Ensure the page takes the full viewport height */
-    }
+body {
+  background-color: #EAEAEA;
+  background-image: url("images/LIFEISACEREMONY.png");
+  background-repeat: repeat-y; /* repeat-y will repeat the image vertically */
+  background-position: 0 50px; /* Adjust the value to increase or decrease the space between each repeat */
+  padding: 25px;
+  display: grid;
+  height: 100vh; /* Ensure the page takes the full viewport height */
+}
+
 
     .logo {
-      background: url("images/testimage1.jpg") no-repeat center/contain;
+      background: url("images/jx_newlogo-1.png") no-repeat center/contain;
       text-align: left;
       color: #fff;
       height: 50px;
@@ -38,13 +41,14 @@
 
     #main {
       text-align: right;
-      margin-top: 150px;
+      margin-top: -100px;
       padding-bottom: 150px;
+      margin-left: 0px;
     }
 
     #main .icon {
       margin: 10px;
-      border-radius: 20px;
+      border-radius: 30px;
       cursor: pointer;
       transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
@@ -55,46 +59,18 @@
       box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
     }
 
-    #main .spotify-icon {
-      margin: 10px;
-      border-radius: 20px;
-      cursor: pointer;
-      transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-    }
-
-    #main .spotify-icon:hover {
-      transform: scale(1.05);
-      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
-    }
-
-    #main .icon-project {
+        #main .icon-project {
       margin: 10px;
       border-radius: 40px;
       cursor: pointer;
       transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
     }
 
     #main .icon-project:hover {
       transform: scale(1.05);
-    }
-
-    #main .icon-small {
-      margin: 10px;
-      border-radius: 15px;
-      cursor: pointer;
-      transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-    }
-
-    #main .icon-small:hover {
-      transform: scale(1.05);
       box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
     }
-
-    a {
-  text-decoration: none;
-}
 
     @keyframes keyframes1 {
       0% {
@@ -128,6 +104,12 @@
         transform: translateY(0);
         animation-timing-function: ease-in-out;
       }
+    }
+
+    .owl {
+      display: grid;
+      place-items: center;
+      width: 75px;
     }
 
     /* Styles for the image popup */
@@ -209,7 +191,33 @@
     background-color: #2c2c2c;
   }
 
-  .footer-tag {
+
+        /* Styles for the breadcrumb navigation menu */
+        .breadcrumbs {
+      text-align: start;
+      margin-left: 20px;
+      margin-top: 400px;
+      margin-bottom: 50px;
+      z-index: 9999;
+    }
+  
+    .breadcrumb {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 14px;
+        color: #333;
+        /* remove link color */
+        text-decoration: none;
+        /* move left */
+        padding: 10px;
+    }
+  
+    .breadcrumb:last-child {
+      font-weight: bold;
+      cursor: pointer;
+      text-decoration: none;
+    }
+
+    .footer-tag {
     bottom: 0;
     left: 50%;
     margin-bottom: 20px;
@@ -221,45 +229,6 @@
     display: flex;
     font-family: arial, helvetica, sans-serif;
     cursor: pointer;
-  }
-
-  /* media queries */
-  @media screen and (max-width: 600px) {
-    #main {
-      text-align: center;
-      margin-top: 300px;
-      padding-top: 100px;
-      margin-left: 0px;
-    }
-
-    #main .icon {
-      margin: 10px;
-    }
-
-    #main .spotify-icon {
-      margin: 10px;
-      max-width: 600px;
-      max-height: 120px;
-    }
-
-    #main .icon-small {
-      margin: 10px;
-      max-width: 130px;
-      max-height: 130px;
-      border-radius: 15px;
-    }
-
-    #main .icon-project {
-      margin: 10px;
-      max-width: 300px;
-      max-height: 60px;
-      border-radius: 20px;
-    }
-
-    .intro-id {
-      margin-left: 50px;
-      margin-top: -20px;
-    }
   }
 
   .rotate {
@@ -274,6 +243,59 @@
     transform: rotate(359deg);
   }
 }
+
+  /* media queries */
+  @media screen and (max-width: 600px) {
+
+    body {
+    overflow-x: hidden;
+    /* move over to left */
+    padding-left: 0px;
+    }
+
+    #main {
+      text-align: center;
+      margin-top: 10px;
+      margin-left: 10px;
+    }
+
+    #main .icon {
+      margin: 10px;
+      max-width: 300px;
+      max-height: auto;
+      margin-right: 0px;
+
+    }
+
+    .text-box {
+      margin: 10px;
+      max-width: 300px;
+      max-height: auto;
+      margin-right: 0px;
+    }
+
+    .breadcrumbs {
+      margin-left: 45px;
+    }
+
+    #main .icon-project {
+      margin: 10px;
+      max-width: 300px;
+      max-height: 60px;
+      border-radius: 20px;
+      margin-right: 0px;
+
+    }
+
+    .intro-id { 
+      margin-left: 50px;
+      margin-top: -20px;
+    }
+
+    .footer-tag {
+      margin-right: -20px;
+  }
+  }
 
   </style>
   <!-- Google tag (gtag.js) -->
@@ -292,38 +314,24 @@
   <div class="intro-id">
     <img src="images/id-tile.png" width="300px" height="auto">
   </div>
+  <div class="breadcrumbs">
+    <span class="breadcrumb"><a href="index.html">Home</a></span> /
+    <span class="breadcrumb">Life Is A Ceremony</span>
+  </div>
   <div id="main">
-    <a href="https://www.instagram.com/plantifulsoul/" target="blank">
-      <img class="icon-small" style="animation-delay: -1.8s; animation-duration: 2.64s" height="auto"
-        src="images/Group 48096416.png" width="150">
-    </a>
-    <a href="mailto:jxandco@gmail.com">
-      <img class="icon-small" style="animation-delay: -1.8s; animation-duration: 2.64s" height="auto"
-        src="images/Group 48096415.png" width="150">
-    </a>
+    <img class="icon" style="animation-delay: -1.8s; animation-duration: 2.64s" height="auto"
+    src="images/banner.png"  width="550">
     <br>
-    <img class="icon-project" style="animation-delay: -2.4s; animation-duration: 2.24s" height="100"
-    src="images/testjoin.png" width="625" id="button">
+    <img class="icon" style="animation-delay: -1.8s; animation-duration: 2.64s" height="auto"
+    src="images/booktile.png"  width="500">
     <br>
-    <a href="https://open.spotify.com/track/5JMZ35LxCjK9jgLmj6oJj9?si=dfdcbcaf47704135">
-      <img class="spotify-icon" style="animation-delay: -1.8s; animation-duration: 2.64s" height="200"
-        src="images/spotifytile.png" width="auto">
-    </a>
+    <img class="icon" style="animation-delay: -1.8s; animation-duration: 2.64s" height="auto"
+    src="images/introtile.png"  width="550">
     <br>
-    <a href="about.html">
-        <img class="icon" style="animation-delay: -1.8s; animation-duration: 2.64s" height="auto"
-          src="images/banner.png" width="300">
-      </a>
-      <a href="">
-        <img class="icon" style="animation-delay: -1.8s; animation-duration: 2.64s" height="auto"
-          src="images/testimage1.jpg" width="300">
-      </a>
-      <br>
-      <br>
-      <img src="images/tiletest.png" class="rotate" width="250" height="250" onclick="showWaveEmoji()" />
-      <br>
-
-    </div>
+        <br>
+        <img src="images/kDDFvUp.png"" class="rotate" width="100" height="100" onclick="showWaveEmoji()" />
+        <br>
+  </div>
   
 
   <!-- Image and video popup container -->
@@ -344,39 +352,10 @@
     </div>
   </div>
   <footer>
-    <div class="footer-tag" onclick="showTekaEmoji()">plantifulsoul</div>
+    <div class="footer-tag" onclick="showTekaEmoji()">JX & Co</div>
   </footer>
   <script src="//embed.typeform.com/next/embed.js"></script>
   <script>
-
-function showWaveEmoji() {
-  // Create a new text node with the wave emoji
-  const waveEmoji = document.createTextNode('👽');
-
-  // Create a <span> element to contain the emoji
-  const emojiContainer = document.createElement('span');
-  emojiContainer.style.position = 'fixed';
-  emojiContainer.style.top = '50%';
-  emojiContainer.style.left = '50%';
-  emojiContainer.style.transform = 'translate(-50%, -50%)';
-  emojiContainer.style.zIndex = '9999';
-  emojiContainer.style.fontSize = '48px'; // You can adjust the font size as needed
-  emojiContainer.style.opacity = '1'; // Initial opacity
-
-  // Append the emoji text node to the container
-  emojiContainer.appendChild(waveEmoji);
-
-  // Append the container to the body
-  document.body.appendChild(emojiContainer);
-
-  // Set a timeout to fade out and remove the emoji after 2 seconds
-  setTimeout(function () {
-    emojiContainer.style.opacity = '0'; // Set opacity to 0 for fade-out effect
-    setTimeout(function () {
-      emojiContainer.remove(); // Remove the emoji after the fade-out
-    }, 500); // Adjust the time for the fade-out effect as needed
-  }, 2000); // Time before starting the fade-out (2 seconds)
-}
 
 function showTekaEmoji() {
   // Create an <img> element for the image
@@ -400,9 +379,6 @@ function showTekaEmoji() {
   }, 2000);
 }
 
-
-
-
     function showImage(src) {
       const popup = document.getElementById('image-popup');
       const popupImage = document.getElementById('popupImage');
@@ -411,8 +387,15 @@ function showTekaEmoji() {
       popupVideo.style.display = 'none';
       popupImage.src = src;
       popup.style.display = 'block';
+  
+      // Close the popup when clicking outside
+      popup.addEventListener('click', function (e) {
+        if (e.target === this) {
+          this.style.display = 'none';
+        }
+      });
     }
-
+  
     function playVideo(src) {
       const popup = document.getElementById('image-popup');
       const popupImage = document.getElementById('popupImage');
@@ -421,26 +404,34 @@ function showTekaEmoji() {
       popupVideo.style.display = 'block';
       popupVideo.src = src;
       popup.style.display = 'block';
+  
+      // Close the popup when clicking outside
+      popup.addEventListener('click', function (e) {
+        if (e.target === this) {
+          this.style.display = 'none';
+        }
+      });
     }
-
+  
     function showPasswordPopup() {
       const passwordPopup = document.getElementById('password-popup');
       passwordPopup.style.display = 'block';
     }
-
+  
     function checkPassword() {
       const passwordInput = document.getElementById('password-input').value;
       if (passwordInput === 'password') {
         const passwordPopup = document.getElementById('password-popup');
         passwordPopup.style.display = 'none';
         // Here you can add the code to show the image or perform other actions.
-        // For example: showImage('Images/OJ-g8aVg.jpeg');
+        // For example: showImage('images/OJ-g8aVg.jpeg');
       } else {
         alert('Incorrect password. Please try again.');
       }
     }
+  
 
-        const { toggle } = window.tf.createPopup('y3UdUmQI', {
+    const { toggle } = window.tf.createPopup('y3UdUmQI', {
         medium: 'demo-test',
         hidden: { foo: 'foo value', bar: 'bar value' },
       })
@@ -448,17 +439,10 @@ function showTekaEmoji() {
         toggle()
       }
 
-          // Close the popup when clicking outside
-    const popups = document.querySelectorAll('.popup');
-    popups.forEach((popup) => {
-      popup.addEventListener('click', function (e) {
-        if (e.target === this) {
-          this.style.display = 'none';
-        }
-        
-      });
-    });
+
+  
   </script>
+  
 </body>
 
 </html>
