--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     #main .icon-project {
       margin: 10px;
       max-width: 300px;
-      max-height: 60px;
+      max-height: 100px;
       border-radius: 20px;
     }
 
@@ -293,35 +293,29 @@
     <img src="images/id-tile.png" width="300px" height="auto">
   </div>
   <div id="main">
-    <a href="https://www.instagram.com/plantifulsoul/" target="blank">
-      <img class="icon-small" style="animation-delay: -1.8s; animation-duration: 2.64s" height="auto"
-        src="images/Group 48096416.png" width="150">
-    </a>
-    <a href="mailto:jxandco@gmail.com">
-      <img class="icon-small" style="animation-delay: -1.8s; animation-duration: 2.64s" height="auto"
-        src="images/Group 48096415.png" width="150">
-    </a>
-    <br>
-    <img class="icon-project" style="animation-delay: -2.4s; animation-duration: 2.24s" height="100"
-    src="images/testjoin.png" width="625" id="button">
-    <br>
     <a href="https://open.spotify.com/track/5JMZ35LxCjK9jgLmj6oJj9?si=dfdcbcaf47704135">
       <img class="spotify-icon" style="animation-delay: -1.8s; animation-duration: 2.64s" height="200"
         src="images/spotifytile.png" width="auto">
     </a>
     <br>
+    <img class="icon-project" style="animation-delay: -2.4s; animation-duration: 2.24s" height="auto"
+    src="images/blurb.png" width="625">
+    <br>
+    <a href="about.html">
+    <img class="icon" src="images/reservetile.png" height="auto" width="300px">
     <a href="about.html">
         <img class="icon" style="animation-delay: -1.8s; animation-duration: 2.64s" height="auto"
           src="images/banner.png" width="300">
       </a>
-      <a href="">
-        <img class="icon" style="animation-delay: -1.8s; animation-duration: 2.64s" height="auto"
-          src="images/testimage1.jpg" width="300">
+      <br>
+      <br>
+      <img src="images/bookme.png" class="rotate" width="150" height="150" onclick="showWaveEmoji()" />
+      <br>
+      <br>
+      <a href="https://www.instagram.com/plantifulsoul/" target="blank">
+        <img class="icon-small" style="animation-delay: -1.8s; animation-duration: 2.64s" height="auto"
+          src="images/Group 48096416.png" width="150">
       </a>
-      <br>
-      <br>
-      <img src="images/tiletest.png" class="rotate" width="250" height="250" onclick="showWaveEmoji()" />
-      <br>
 
     </div>
   
