--- a/index.html
+++ b/index.html
@@ -302,10 +302,8 @@
     src="images/blurb.png" width="625">
     <br>
     <a href="about.html">
-    <img class="icon" src="images/reservetile.png" height="auto" width="300px">
-    <a href="about.html">
         <img class="icon" style="animation-delay: -1.8s; animation-duration: 2.64s" height="auto"
-          src="images/banner.png" width="300">
+          src="images/introbanner.png" width="300">
       </a>
       <br>
       <br>
