--- a/about.html
+++ b/about.html
@@ -352,7 +352,7 @@ body {
     </div>
   </div>
   <footer>
-    <div class="footer-tag" onclick="showTekaEmoji()">JX & Co</div>
+    <div class="footer-tag" onclick="showTekaEmoji()">made by typo</div>
   </footer>
   <script src="//embed.typeform.com/next/embed.js"></script>
   <script>
@@ -360,7 +360,7 @@ body {
 function showTekaEmoji() {
   // Create an <img> element for the image
   const emojiImage = document.createElement('img');
-  emojiImage.src = 'images/teka.png'; // Set the image source
+  emojiImage.src = 'images/typosquig.png'; // Set the image source
 
   // Style the image element
   emojiImage.style.position = 'fixed';
