--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     #main .spotify-icon {
       margin: 10px;
-      border-radius: 20px;
+      border-radius: 30px;
       cursor: pointer;
       transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
@@ -240,6 +240,7 @@
       margin: 10px;
       max-width: 600px;
       max-height: 120px;
+      border-radius: 20px;
     }
 
     #main .icon-small {
@@ -309,10 +310,16 @@
       <br>
       <img src="images/bookme.png" class="rotate" width="150" height="150" onclick="showWaveEmoji()" />
       <br>
+      <img class="icon-project" style="animation-delay: -2.4s; animation-duration: 2.24s" height="auto"
+      src="images/blurbus.png" width="625">
       <br>
       <a href="https://www.instagram.com/plantifulsoul/" target="blank">
         <img class="icon-small" style="animation-delay: -1.8s; animation-duration: 2.64s" height="auto"
           src="images/Group 48096416.png" width="150">
+      </a>
+      <a href="https://www.youtube.com/@ClaireMichelle1144" target="blank">
+        <img class="icon-small" style="animation-delay: -1.8s; animation-duration: 2.64s" height="auto"
+          src="images/yttile.png" width="150">
       </a>
 
     </div>
@@ -336,7 +343,7 @@
     </div>
   </div>
   <footer>
-    <div class="footer-tag" onclick="showTekaEmoji()">plantifulsoul</div>
+    <div class="footer-tag" onclick="showTekaEmoji()">made by typo</div>
   </footer>
   <script src="//embed.typeform.com/next/embed.js"></script>
   <script>
@@ -373,7 +380,7 @@ function showWaveEmoji() {
 function showTekaEmoji() {
   // Create an <img> element for the image
   const emojiImage = document.createElement('img');
-  emojiImage.src = 'images/teka.png'; // Set the image source
+  emojiImage.src = 'images/typosquig.png'; // Set the image source
 
   // Style the image element
   emojiImage.style.position = 'fixed';
