--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 body {
   background-color: #EAEAEA;
   background-image: url("images/LIFEISACEREMONY.png");
-  background-repeat: repeat-y; /* repeat-y will repeat the image vertically */
+  background-repeat: repeat; /* repeat-y will repeat the image vertically */
   background-position: 0 50px; /* Adjust the value to increase or decrease the space between each repeat */
   padding: 25px;
   display: grid;
