--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="//embed.typeform.com/next/css/popup.css" />
   <meta name="description" content="dreaming wide awake.">
-  <meta property="og:image" content="images/intro-thumbnail-tile.png">
-  <link rel="icon" href="images/testimage1.jpg" type="image/icon type">
+  <meta property="og:image" content="images/linkpreview.png" /> 
+  <link rel="icon" href="images/bookme.png" type="image/icon type">
   <style>
-    body {
-      background-color: #EFEFEF;
-      padding: 25px;
-      margin: 0;
-      display: grid;
-      height: 100vh; /* Ensure the page takes the full viewport height */
-    }
+body {
+  background-color: #EAEAEA;
+  background-image: url("images/LIFEISACEREMONY.png");
+  background-repeat: repeat; /* repeat-y will repeat the image vertically */
+  background-position: 0 50px; /* Adjust the value to increase or decrease the space between each repeat */
+  padding: 25px;
+  display: grid;
+  height: 100vh; /* Ensure the page takes the full viewport height */
+}
 
     .logo {
       background: url("images/testimage1.jpg") no-repeat center/contain;
@@ -302,13 +304,9 @@
     <img class="icon-project" style="animation-delay: -2.4s; animation-duration: 2.24s" height="auto"
     src="images/blurb.png" width="625">
     <br>
-    <a href="about.html">
-        <img class="icon" style="animation-delay: -1.8s; animation-duration: 2.64s" height="auto"
-          src="images/introbanner.png" width="300">
-      </a>
-      <br>
-      <br>
-      <img src="images/bookme.png" class="rotate" width="150" height="150" onclick="showWaveEmoji()" />
+    <a href="https://plantifulsoul.shop/" target="_blank">
+      <img class="icon" style="animation-delay: -1.8s; animation-duration: 2.64s" height="auto" src="images/introbanner.png" width="300">
+  </a>  
       <br>
       <img class="icon-project" style="animation-delay: -2.4s; animation-duration: 2.24s" height="auto"
       src="images/blurbus.png" width="625">
@@ -321,6 +319,9 @@
         <img class="icon-small" style="animation-delay: -1.8s; animation-duration: 2.64s" height="auto"
           src="images/yttile.png" width="150">
       </a>
+      <br>
+      <img src="images/bookme.png" class="rotate" width="150" height="150" onclick="showWaveEmoji()" />
+      <br>
 
     </div>
   
